--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,10 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Research"
+      href: research.html
+    - text: "Blog"
+      href: blog.html
+    - text: "CV"
+      href: CV.html
 output: distill::distill_article
