--- a/_site.yml
+++ b/_site.yml
@@ -6,7 +6,7 @@ output_dir: "_site"
 navbar:
   right:
     - text: "Home"
-      href: index.html
+      href: .html
     - text: "About"
       href: about.html
     - text: "Research"
