--- a/_site.yml
+++ b/_site.yml
@@ -23,3 +23,4 @@ navbar:
     - icon: google-scholar
       href: https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en
 output: distill::distill_article
+theme: "Gonzalo_theme.css"
