--- a/_site.yml
+++ b/_site.yml
@@ -15,7 +15,7 @@ navbar:
     - text: "Blog"
       href: blog.html
     - text: "CV"
-      href: CV.html
+      href: CV_Gonzalo_PerezRosales.pdf
   left:
     - icon: fa fa-twitter
       href: https://mobile.twitter.com/Perez_Rosales_G
