--- a/_site.yml
+++ b/_site.yml
@@ -25,3 +25,5 @@ navbar:
       href: https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en
 output: distill::distill_article
 theme: "Gonzalo_theme.css"
+include:
+      after_body: footer.html
