--- a/_site.yml
+++ b/_site.yml
@@ -25,6 +25,8 @@ navbar:
       href: https://scholar.google.com/citations?user=qLfSUS4AAAAJ&hl=en
 output: distill::distill_article
 theme: "Gonzalo_theme.css"
+include:
+  after_body: footer.html
 
 
 # I am trying to add the footer
